Test/test0/WhereParsing.bpl.expect
WhereParsing.bpl(16,37): error: where clause not allowed on the 'implementation' copies of formals
WhereParsing.bpl(17,33): error: where clause not allowed on the 'implementation' copies of formals
2 parse errors detected in WhereParsing.bpl
